--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>CORE</title>
   <link rel="stylesheet" href="style/style.css" />
   <link rel="stylesheet" href="style/mediaquery.css">
+  <link rel="stylesheet" href="style/animation.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat&family=Roboto+Mono&display=swap"
@@ -46,18 +47,18 @@
   <main>
     <section id="nosotros" class="first-part">
       <div class="first-part-text">
-        <h1>Se tu mejor version</h1>
-        <h5>
+        <h1 class="animate__zoomIn">Se tu mejor version</h1>
+        <h5 class="animate__zoomIn2">
           En CORE, somos un equipo de apasionados comprometidos en inspirar y
           motivar a otros a alcanzar sus objetivos y metas.
         </h5>
       </div>
-      <div class="container-position">
-        <div class="container-items">
-          <div class="card">
+      <div class="container-position ">
+        <div class="container-items animate__fadeInUp">
+          <div class="card ">
             <div class="card-order">
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-barbell-off" width="60"
+              <span class="animate__rotateInDownRight">
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-barbell-off" width="60"
                   height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -82,8 +83,8 @@
           </div>
           <div class="card">
             <div class="card-order">
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="60" height="60"
+              <span class="animate__rotateInDownRight">
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-home" width="60" height="60"
                   viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -101,8 +102,8 @@
           </div>
           <div class="card">
             <div class="card-order">
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mood-smile" width="60"
+              <span class="animate__rotateInDownRight">
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-mood-smile" width="60"
                   height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -122,8 +123,8 @@
           </div>
           <div class="card">
             <div class="card-order">
-              <span>
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-free-rights" width="60"
+              <span class="animate__rotateInDownRight">
+                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-free-rights" width="60"
                   height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -157,7 +158,7 @@
               </div>
               <img src="style/gutierrez.webp" />
               <ul>
-                <li>Juan María Gutiérrez 2576, Recoleta, CABA</li>
+                <li>Gutiérrez 2576, Recoleta, CABA</li>
                 <li>+54 9 11 3059 4152</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -190,7 +191,7 @@
               </div>
               <img src="style/palermo soho.webp" />
               <ul>
-                <li>Jorge Luis Borges 2259, Palermo Soho, CABA</li>
+                <li>Borges 2259, Palermo, CABA</li>
                 <li>+54 9 011 2458 0454</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -212,7 +213,7 @@
               </div>
               <img src="style/scalabrini.webp" />
               <ul>
-                <li>Av. Raúl Scalabrini Ortíz 1581, Palermo, CABA</li>
+                <li>Scalabrini 1581, Palermo, CABA</li>
                 <li>+54 9 011 5467 0472</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -223,7 +224,7 @@
               </div>
               <img src="style/caballito.webp" />
               <ul>
-                <li>Av. Cabildo 2588, Belgrano, CABAA</li>
+                <li>Cabildo 2588, Belgrano, CABA</li>
                 <li>+54 9 011 3403 2534</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -234,7 +235,7 @@
               </div>
               <img src="style/cañitas.webp" />
               <ul>
-                <li>Av. Luis Maria Campos 290, Las Cañitas, CABA</li>
+                <li>Maria Campos 290,Cañitas, CABA</li>
                 <li>+54 9 011 5528 0578</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -245,7 +246,7 @@
               </div>
               <img src="style/caballito.webp" />
               <ul>
-                <li>Jose Maria Moreno 357, Caballito, CABA</li>
+                <li>Moreno 357, Caballito, CABA</li>
                 <li>+54 9 011 6968 7108</li>
                 <li>Proba una clase sin cargo</li>
               </ul>
@@ -276,7 +277,7 @@
               <div class="sede-direction">
                 <h4>RECOLETA JUNCAL - PRÓXIMAMENTE</h4>
               </div>
-              <img src="style/PROXIMAMENTE.jpg" />
+              <img class="proximamente" src="style/PROXIMAMENTE2.jpg" />
               <ul>
                 <li>Juncal 2740, Recoleta, CABA</li>
                 <li>Proba una clase sin cargo</li>
