--- a/index.html
+++ b/index.html
@@ -330,39 +330,32 @@
       </div>
     </section>
     <section class="fourth-part">
-      <div class="core">
-        <div class="prueba">
+        <div class="core">
           <div class="core-image-1-3">
             <div class="image">
               <img src="style/CONTACTANOS 1.webp" />
             </div>
             <div class="block"></div>
           </div>
-        </div>
-        <div class="prueba-2">
+     
           <div class="core-image-2-4">
             <div class="image">
               <img src="style/CONTACTANOS 2.webp" />
             </div>
             <div class="block"></div>
           </div>
-        </div>
-        <div class="prueba">
           <div class="core-image-1-3">
             <div class="image">
               <img src="style/CONTACTANOS 3.webp" />
             </div>
             <div class="block"></div>
           </div>
-        </div>
-        <div class="prueba-2">
           <div class="core-image-2-4">
             <div class="image">
               <img src="style/CONTACTANOS 4.webp" />
             </div>
             <div class="block"></div>
           </div>
-        </div>
       </div>
     </section>
     <section id="contactanos" class="fifth-part">
@@ -420,7 +413,7 @@
       </svg>
     </span>
   </div>
-  <div class="core">
+  <div class="core-footer">
     <a href="#">
       <img src="style/qt=q_95.webp" alt="" />
     </a>
