--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/mediaquery.css">
     <link rel="stylesheet" href="style/animation.css">
@@ -20,7 +20,7 @@
         <nav>
             <ul class="list">
                 <li>
-                    <a href="register.html">Registrate</a>
+                    <a href="login.html">Inicia Sesion</a>
                 </li>
             </ul>
         </nav>
@@ -30,19 +30,20 @@
             <img src="style/login.webp">
             <div class="login-text">
                 <div class="login-dates">
-                    <label for="">Mail:</label>
-                    <input type="email">
+                    <input type="email" placeholder="Email">
                 </div>
                 <div class="login-dates">
-                    <label for="">Contraseña</label>
-                    <input type="password">
+                    <input type="password" placeholder="Contraseña">
+                </div>
+                <div class="login-dates">
+                    <input type="password" placeholder="Confirmar Contraseña">
                 </div>
                 <div class="login-buttom">
-                    <input type="submit" value="Iniciar Sesion">
+                    <input type="submit" value="Registrarse">
                 </div>
                 <div class="login-register">
-                    <p>¿No te registraste?</p>
-                    <a href="register.html">Registrate</a>
+                    <p>¿Ya estas registrado?</p>
+                    <a href="login.html">Iniciar Sesion</a>
                 </div>
             </div>
         </form>
