--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header class="nav-completo">
-    <img src="style/qt=q_95.webp" alt="" />
+    <a href="#"><img src="style/qt=q_95.webp" /></a>
     <nav class="navbar">
       <label for="toggle-menu"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2"
           width="52" height="52" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none"
@@ -39,7 +39,7 @@
           <a href="#contactanos">CONTACTANOS</a>
         </li>
         <li>
-          <a href="#">LOGIN</a>
+          <a href="login.html">LOGIN</a>
         </li>
       </ul>
     </nav>
@@ -58,8 +58,9 @@
           <div class="card ">
             <div class="card-order">
               <span class="animate__rotateInDownRight">
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-barbell-off" width="60"
-                  height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                <svg xmlns="http://www.w3.org/2000/svg"
+                  class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-barbell-off" width="60" height="60"
+                  viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                   <path d="M2 12h1" />
@@ -84,7 +85,8 @@
           <div class="card">
             <div class="card-order">
               <span class="animate__rotateInDownRight">
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-home" width="60" height="60"
+                <svg xmlns="http://www.w3.org/2000/svg"
+                  class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-home" width="60" height="60"
                   viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -103,8 +105,9 @@
           <div class="card">
             <div class="card-order">
               <span class="animate__rotateInDownRight">
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-mood-smile" width="60"
-                  height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                <svg xmlns="http://www.w3.org/2000/svg"
+                  class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-mood-smile" width="60" height="60"
+                  viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                   <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
@@ -124,8 +127,9 @@
           <div class="card">
             <div class="card-order">
               <span class="animate__rotateInDownRight">
-                <svg xmlns="http://www.w3.org/2000/svg" class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-free-rights" width="60"
-                  height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+                <svg xmlns="http://www.w3.org/2000/svg"
+                  class="animate__rotateInDownRight2 icon icon-tabler icon-tabler-free-rights" width="60" height="60"
+                  viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                   <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
@@ -330,32 +334,32 @@
       </div>
     </section>
     <section class="fourth-part">
-        <div class="core">
-          <div class="core-image-1-3">
-            <div class="image">
-              <img src="style/CONTACTANOS 1.webp" />
-            </div>
-            <div class="block"></div>
+      <div class="core">
+        <div class="core-image-1-3">
+          <div class="image">
+            <img src="style/CONTACTANOS 1.webp" />
           </div>
-     
-          <div class="core-image-2-4">
-            <div class="image">
-              <img src="style/CONTACTANOS 2.webp" />
-            </div>
-            <div class="block"></div>
+          <div class="block"></div>
+        </div>
+
+        <div class="core-image-2-4">
+          <div class="image">
+            <img src="style/CONTACTANOS 2.webp" />
           </div>
-          <div class="core-image-1-3">
-            <div class="image">
-              <img src="style/CONTACTANOS 3.webp" />
-            </div>
-            <div class="block"></div>
+          <div class="block"></div>
+        </div>
+        <div class="core-image-1-3">
+          <div class="image">
+            <img src="style/CONTACTANOS 3.webp" />
           </div>
-          <div class="core-image-2-4">
-            <div class="image">
-              <img src="style/CONTACTANOS 4.webp" />
-            </div>
-            <div class="block"></div>
+          <div class="block"></div>
+        </div>
+        <div class="core-image-2-4">
+          <div class="image">
+            <img src="style/CONTACTANOS 4.webp" />
           </div>
+          <div class="block"></div>
+        </div>
       </div>
     </section>
     <section id="contactanos" class="fifth-part">
@@ -403,14 +407,16 @@
 <footer class="footer">
   <div class="insta">
     <span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="50"
-        height="50" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round"
-        stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-        <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
-        <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
-        <path d="M16.5 7.5l0 .01" />
-      </svg>
+      <a href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="50"
+          height="50" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" />
+          <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0" />
+          <path d="M16.5 7.5l0 .01" />
+        </svg>
+      </a>
     </span>
   </div>
   <div class="core-footer">
@@ -420,13 +426,15 @@
   </div>
   <div class="tiktok">
     <span>
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="50" height="50"
-        viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
-        stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-        <path
-          d="M21 7.917v4.034a9.948 9.948 0 0 1 -5 -1.951v4.5a6.5 6.5 0 1 1 -8 -6.326v4.326a2.5 2.5 0 1 0 4 2v-11.5h4.083a6.005 6.005 0 0 0 4.917 4.917z" />
-      </svg>
+      <a href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" width="50" height="50"
+          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M21 7.917v4.034a9.948 9.948 0 0 1 -5 -1.951v4.5a6.5 6.5 0 1 1 -8 -6.326v4.326a2.5 2.5 0 1 0 4 2v-11.5h4.083a6.005 6.005 0 0 0 4.917 4.917z" />
+        </svg>
+      </a>
     </span>
   </div>
 </footer>
